WebCore/loader/FrameLoader.cpp
@@ -1749,9 +1749,13 @@ void FrameLoader::clearRecordedFormValues()
     m_formValuesAboutToBeSubmitted.clear();
 }
 
-void FrameLoader::recordFormValue(const String& name, const String& value, PassRefPtr<HTMLFormElement> element)
+void FrameLoader::setFormAboutToBeSubmitted(PassRefPtr<HTMLFormElement> element)
 {
     m_formAboutToBeSubmitted = element;
+}
+
+void FrameLoader::recordFormValue(const String& name, const String& value)
+{
     m_formValuesAboutToBeSubmitted.set(name, value);
 }
 
@@ -2088,14 +2092,14 @@ void FrameLoader::loadFrameRequestWithFormState(const FrameLoadRequest& request,
         if (Page* page = targetFrame->page())
             page->chrome()->focus();
 }
-        
+
 void FrameLoader::loadFrameRequestWithFormAndValues(const FrameLoadRequest& request, bool lockHistory, Event* event,
     HTMLFormElement* submitForm, const HashMap<String, String>& formValues)
 {
     RefPtr<FormState> formState;
-    if (submitForm && !formValues.isEmpty())
+    if (submitForm)
         formState = FormState::create(submitForm, formValues, m_frame);
-    
+
     loadFrameRequestWithFormState(request, lockHistory, event, formState.release());        
 }
 
